--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,30 +1,21 @@
 /* app css stylesheet */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.overflowable {
+    height: 240px;
+    overflow-y: auto;
+    border: 1px solid #000;
 }
 
-.menu:before {
-  content: "[";
+.overflowable p {
+    margin: 0;
 }
 
-.menu:after {
-  content: "]";
+/* poor man's grid system */
+.col {
+    float: left;
+    width: 350px;
 }
 
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.clr {
+    clear: both;
 }
