--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,11 @@
 !!!
 html(ng-app="myApp")
-  head
-    meta(charset='utf8')
-    base(href='/')
-    title Angular Socket.io Seed App
-    link(rel='stylesheet', href='/css/app.css')
-  body
-    block body
+    head
+        meta(charset='utf8')
+        base(href='/')
+        title Angular Socket.io IM Demo App
+        link(rel='stylesheet', href='/css/app.css')
+    body
+        block body
+
+
